--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "scraper-cli"
 version = "0.1.0"
-description = ""
+description = "Modern interactive web scraper CLI (Typer + Rich + SQLite)"
 authors = [
     {name = "Walid Newaz",email = "mdwalid@gmail.com"}
 ]
@@ -17,13 +17,34 @@ dependencies = [
 
 [tool.poetry]
 packages = [{include = "scraper_cli", from = "src"}]
+#packages = [{ include = "scraper" }]
 
+
+#[tool.poetry.dependencies]
+#python = "^3.10"
+#typer = "^0.12.0"
+#rich = "^13.0.0"
+#httpx = "^0.27.0"
+#beautifulsoup4 = "^4.12.0"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
 ruff = "^0.13.0"
 mypy = "^1.18.1"
 pytest = "^8.4.2"
+
+[tool.black]
+line-length = 100
+
+[tool.ruff]
+line-length = 100
+
+[tool.mypy]
+python_version = "3.10"
+strict = false
+
+[tool.poetry.scripts]
+scraper-cli = "scraper_cli.cli:main"
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
