--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,10 @@ dependencies = [
     "rich (>=14.1.0,<15.0.0)",
     "httpx (>=0.28.1,<0.29.0)",
     "beautifulsoup4 (>=4.13.5,<5.0.0)",
-    "lxml (>=6.0.1,<7.0.0)"
+    "lxml (>=6.0.1,<7.0.0)",
+    "fastapi (>=0.116.2,<0.117.0)",
+    "uvicorn[standard] (>=0.35.0,<0.36.0)",
+    "pydantic (>=2.11.9,<3.0.0)"
 ]
 
 [tool.poetry]
